[package]
name = "kvs"
version = "0.1.0"
authors = ["DEDZTBH <peiqial@outlook.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
failure = "0.1.8"
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false